--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                     <img src="images/logos.png" />
                     <h2>Solución de Expediente Electrónico Integrado</h2> 
                     <h3>Arquitectura</h3>
+                    <a href="https://andres-blanco.github.io/expedientes-slides">https://andres-blanco.github.io/expedientes-slides</a>
                 </section>
 				<section>
                     <section>
